# ideogram

./: README.md  com.github.cassidyjames.ideogram.yml  meson.build
.github/workflows/: main.yml  release.yml
data/: Application.css  appdata.xml  com.github.cassidyjames.ideogram.appdata.xml.in  gresource.xml  launcher.desktop  launcher.desktop.in  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES.in  README.md  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.cassidyjames.ideogram.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+159 more)
src/: Application.vala  MainWindow.vala
src/Settings/: CustomShortcutSettings.vala
